k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wagtail-example
  name: wagtail-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wagtail-example
  template:
    metadata:
      labels:
        app: wagtail-example
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipeline-project/demo:latest
          imagePullPolicy: Always
          name: wagtail-example
          ports:
            - containerPort: 8000
              protocol: TCP
