k8s/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wagtail
  name: wagtail
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: wagtail
    weight: 100
